@@ -601,9 +601,10 @@ AVT_API int avt_move_out (void);
 
 /*
  * show longer text with a text-viewer application
+ * if len is 0, assume 0-terminated string
+ * startline is only used, when it is greater than 1
  */
-AVT_API int avt_pager_mb_len (const char *txt, int len, int startline);
-AVT_API int avt_pager_mb (const char *txt, int startline);
+AVT_API int avt_pager_mb (const char *txt, int len, int startline);
 
 /*
  * show final credits
